# watermarking-eeg-models

./: .gitignore  CLAUDE.md  README.md  config.py  dataset.py  encryption.py  feature_attribution.py  fine_tuning.py  models.py  plot.py  pruning.py  pyproject.toml  requirements.txt  results.py  train.py  transfer_learning.py  triggerset.py  utils.py
.github/workflows/: ci.yml
eegwm/: __init__.py  __main__.py  cli.py  config.py  constants.py  models.py  utils.py
eegwm/architectures/: __init__.py  _heads.py  base.py  ccnn.py  eegnet.py  tsception.py
eegwm/data/: dataset.py  stats.py
eegwm/evaluation/: evaluate.py  results.py
eegwm/experiments/: feature_attribution.py  fine_tuning.py  pruning.py  quantization.py
eegwm/training/: callbacks.py  runner.py
eegwm/viz/: plot.py
eegwm/watermark/: encryption.py  triggerset.py
tests/: test_config.py  test_watermark.py
